Limit use_client_side_arrays_for_stream_buffers to command buffer ES2 contexts.

Several ES3 commands do not handle that workaround at the moment.

BUG=826509
TEST=gl_tests
R=piman@chromium.org

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I2d4e53fbf8c0d548b6de414073d5afa9ac58fd26
Reviewed-on: https://chromium-review.googlesource.com/985119
Commit-Queue: Zhenyao Mo <zmo@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547022}
Former-commit-id: 41e86f24a8c7921bf1981f21b0a944f26a859799