gpu/command_buffer/service/feature_info_unittest.cc
@@ -1427,8 +1427,16 @@ TEST_P(FeatureInfoTest, InitializeVAOsWithClientSideArrays) {
   workarounds.use_client_side_arrays_for_stream_buffers = true;
   SetupInitExpectationsWithWorkarounds("GL_OES_vertex_array_object",
                                        workarounds);
-  EXPECT_TRUE(info_->workarounds().use_client_side_arrays_for_stream_buffers);
-  EXPECT_FALSE(info_->feature_flags().native_vertex_array_object);
+  if (GetContextType() == CONTEXT_TYPE_OPENGLES2) {
+    EXPECT_TRUE(info_->workarounds().use_client_side_arrays_for_stream_buffers);
+    EXPECT_FALSE(info_->feature_flags().native_vertex_array_object);
+  } else {  // CONTEXT_TYPE_OPENGLES3
+    // We only turn on use_client_side_arrays_for_stream_buffers on ES2
+    // contexts. See https://crbug.com/826509.
+    EXPECT_FALSE(
+        info_->workarounds().use_client_side_arrays_for_stream_buffers);
+    EXPECT_TRUE(info_->feature_flags().native_vertex_array_object);
+  }
 }
 
 TEST_P(FeatureInfoTest, InitializeEXT_blend_minmax) {
